// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<AdaptableGrid /> by default matches with snapshot 1`] = `
<div
  className="sc-bdVaJa kOvCsC"
>
  <div
    className="sc-bwzfXH hKyxyB"
  >
    Test
  </div>
  <div
    className="sc-bwzfXH ivEcjV"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with className matches with snapshot 1`] = `
<div
  className="sc-bdVaJa kOvCsC my_classname"
>
  <div
    className="sc-bwzfXH gCxarn my_second_classname"
  >
    Test
  </div>
  <div
    className="sc-bwzfXH gCxarn my_third_classname"
  >
    Test
  </div>
</div>
`;

exports[`<AdaptableGrid /> with custom HTML tags matches with snapshot 1`] = `
<dl
  className="sc-bdVaJa kOvCsC"
>
  <dd
    className="sc-bwzfXH hKyxyB"
  >
    Test
  </dd>
  <dt
    className="sc-bwzfXH ivEcjV"
  >
    Test
  </dt>
</dl>
`;

exports[`<AdaptableGrid /> with some props matches with snapshot 1`] = `
<div
  className="sc-bdVaJa hUIlOj"
>
  <div
    className="sc-bwzfXH ewKIHD"
    offset={3}
  >
    Test
  </div>
  <div
    className="sc-bwzfXH gCxarn"
  >
    Test
  </div>
</div>
`;
